--- a/index.html
+++ b/index.html
@@ -6,10 +6,19 @@
     <title>Portfólio Victor Manoel</title>
     <link rel="stylesheet" href="estilos/style.css">
     <link rel="shortcut icon" href="favicon.svg" type="image/svg">
+    <script src="https://kit.fontawesome.com/412e60f1e0.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
-
+        <nav id="menu">
+            <ul>
+                <li><a href="#"><i class="fa-solid fa-house" aria-hidden="true"></i></a></li>
+                <li><a href="#"><i class="fa-solid fa-brain"></i></a></li>
+                <li><a href="#"><i class="fa-duotone fa-solid fa-graduation-cap"></i></a></li>
+                <li><a href="#"><i class="fa-solid fa-trowel-bricks"></i></a></li>
+                <li><a href="#"><i class="fa-solid fa-moon"></i></a></li>
+            </ul>
+        </nav>
     </header>
 
     <main>
