--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Portfólio Victor Manoel</title>
     <link rel="stylesheet" href="estilos/style.css">
     <link rel="shortcut icon" href="favicon.svg" type="image/svg">
-    <script src="https://kit.fontawesome.com/412e60f1e0.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/ba683beee3.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
@@ -22,7 +22,26 @@
     </header>
 
     <main>
-        <h1>Em breve...</h1>
+        <section id="ficha">
+            <img src="imagens/guanabara-perfil.jpg" alt="Victor Manoel" class="foto">
+            <h1>Victor Manoel</h1>
+            <p>
+                🧑‍💻 Técnico em Informática (em formação) | Desenvolvedor Front-end em aprendizado | Projeto de marketplace como TCC | Disponível para estágio ou primeiro emprego
+            </p>
+            <div id="social">
+                <a href="https://www.linkedin.com/in/victor-manoel-a7abb1341/" target="_blank" rel="nofollow"><i class="fa-brands fa-square-linkedin"></i></a>
+                <a href="https://github.com/victormfmarques" target="_blank" rel="nofollow"><i class="fa-brands fa-github"></i></a>
+                <a href="https://www.youtube.com/@IIV1CTORII" target="_blank" rel="nofollow"><i class="fa-brands fa-youtube"></i></a>
+                <a href="https://www.instagram.com/victorr_m7/" target="_blank" rel="nofollow"><i class="fa-brands fa-instagram"></i></a>
+                <a href="https://ecomarket-samavi.vercel.app/" target="_blank" rel="nofollow"><i class="fa-solid fa-store"></i></a>
+            </div>
+        </section>
+        <section id="detalhes">
+            <h2><i class="fa-solid fa-handshake"></i> Deixe-me me apresentar</h2>
+            <div id="video">
+                <iframe width="556" height="313" src="https://www.youtube.com/embed/VdWfSfWA_BQ" title="Portfólio Gustavo Guanabara" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            </div>
+        </section>
     </main>
 
     <footer>
