--- a/index.html
+++ b/index.html
@@ -51,9 +51,89 @@
                             <!-- Skill 01 -->
                             <div class="info">
                                 <span class="nome">
-                                    HTML
+                                    <i class="fa-solid fa-code"></i> HTML5
                                 </span>
-                                <span class="porcent"></span>
+                                <span class="porcent">
+                                    80%
+                                </span>
+                            </div>
+                            <div class="barra">
+                                <div class="progresso" style="width: 80%;"></div>
+                            </div>
+                        </div>
+
+                        <div class="item">
+                            <!-- Skill 02 -->
+                            <div class="info">
+                                <span class="nome">
+                                    <i class="fa-solid fa-code"></i> CSS3
+                                </span>
+                                <span class="porcent">
+                                    70%
+                                </span>
+                            </div>
+                            <div class="barra">
+                                <div class="progresso" style="width: 70%;"></div>
+                            </div>
+                        </div>
+
+                        <div class="item">
+                            <!-- Skill 03 -->
+                            <div class="info">
+                                <span class="nome">
+                                    <i class="fa-solid fa-code"></i> JavaScript
+                                </span>
+                                <span class="porcent">
+                                    40%
+                                </span>
+                            </div>
+                            <div class="barra">
+                                <div class="progresso" style="width: 40%;"></div>
+                            </div>
+                        </div>
+
+                        <div class="item">
+                            <!-- Skill 04 -->
+                            <div class="info">
+                                <span class="nome">
+                                    <i class="fa-solid fa-person-rays"></i> Comunicação
+                                </span>
+                                <span class="porcent">
+                                    60%
+                                </span>
+                            </div>
+                            <div class="barra">
+                                <div class="progresso" style="width: 60%;"></div>
+                            </div>
+                        </div>
+
+                        <div class="item">
+                            <!-- Skill 05 -->
+                            <div class="info">
+                                <span class="nome">
+                                    <i class="fa-solid fa-person-rays"></i> Adaptabilidade
+                                </span>
+                                <span class="porcent">
+                                    50%
+                                </span>
+                            </div>
+                            <div class="barra">
+                                <div class="progresso" style="width: 50%;"></div>
+                            </div>
+                        </div>
+
+                        <div class="item">
+                            <!-- Skill 06 -->
+                            <div class="info">
+                                <span class="nome">
+                                    <i class="fa-solid fa-person-rays"></i> Liderança
+                                </span>
+                                <span class="porcent">
+                                    70%
+                                </span>
+                            </div>
+                            <div class="barra">
+                                <div class="progresso" style="width: 70%;"></div>
                             </div>
                         </div>
                     </div>
