ancora nas imagens

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                     <div id="projetos-container">
                         <div class="projeto">
                             <!-- PROJETO 01 -->
-                            <img class="foto" src="imagens/projeto-01-videos.jpg" alt="projeto-01">
+                            <a href="https://victormfmarques.github.io/html-css/desafios/d009/desafio-navegacao" target="_blank"><img class="foto" src="imagens/projeto-01-videos.jpg" alt="projeto-01"></a>
                                 <div class="projeto-info">
                                     <p class="ano">2025</p>
                                     <h3 class="titulo">Projeto de Vídeos</h3>
@@ -178,7 +178,7 @@
                         
                         <div class="projeto">
                             <!-- PROJETO 02 -->
-                            <img class="foto" src="imagens/projeto-02-cordel.jpg" alt="projeto-01">
+                            <a href="https://victormfmarques.github.io/projeto-cordel/" target="_blank"><img class="foto" src="imagens/projeto-02-cordel.jpg" alt="projeto-02"></a>
                                 <div class="projeto-info">
                                     <p class="ano">2025</p>
                                     <h3 class="titulo">Projeto Cordel</h3>
@@ -194,7 +194,7 @@
 
                         <div class="projeto">
                             <!-- PROJETO 03 -->
-                            <img class="foto" src="imagens/projeto-03-android.jpg" alt="projeto-01">
+                            <a href="https://victormfmarques.github.io/projeto-android/" target="_blank"><img class="foto" src="imagens/projeto-03-android.jpg" alt="projeto-03"></a>
                                 <div class="projeto-info">
                                     <p class="ano">2025</p>
                                     <h3 class="titulo">Projeto Android</h3>
@@ -210,7 +210,7 @@
 
                         <div class="projeto">
                             <!-- PROJETO 04 -->
-                            <img class="foto" src="imagens/projeto-04-links.jpg" alt="projeto-01">
+                            <a href="https://victormfmarques.github.io/projeto-social/" target="_blank"><img class="foto" src="imagens/projeto-04-links.jpg" alt="projeto-04"></a>
                                 <div class="projeto-info">
                                     <p class="ano">2025</p>
                                     <h3 class="titulo">Projeto Redes Sociais</h3>
@@ -226,7 +226,7 @@
 
                         <div class="projeto">
                             <!-- PROJETO 05 -->
-                            <img class="foto" src="imagens/projeto-05-login.jpg" alt="projeto-01">
+                            <a href="https://victormfmarques.github.io/projeto-login/" target="_blank"><img class="foto" src="imagens/projeto-05-login.jpg" alt="projeto-05"></a>
                                 <div class="projeto-info">
                                     <p class="ano">2025</p>
                                     <h3 class="titulo">Projeto Login</h3>
@@ -242,7 +242,7 @@
 
                         <div class="projeto">
                             <!-- PROJETO 06 -->
-                            <img class="foto" src="imagens/projeto-06-album.jpg" alt="projeto-01">
+                            <a href="https://victormfmarques.github.io/html-css/exercicios/ex026/mq004/" target="_blank"><img class="foto" src="imagens/projeto-06-album.jpg" alt="projeto-06"></a>
                                 <div class="projeto-info">
                                     <p class="ano">2025</p>
                                     <h3 class="titulo">Projeto Álbum de Fotos</h3>
@@ -258,7 +258,7 @@
 
                         <div class="projeto">
                             <!-- PROJETO 07 -->
-                            <img class="foto" src="imagens/projeto-07-marketplace.jpg" alt="projeto-01">
+                            <a href="https://ecomarket-samavi.vercel.app" target="_blank"><img class="foto" src="imagens/projeto-07-marketplace.jpg" alt="projeto-07"></a>
                                 <div class="projeto-info">
                                     <p class="ano">2025</p>
                                     <h3 class="titulo">Projeto de Marketplace</h3>
